Resolve inline filters dropdown bug on smallscreens

--- a/wp-content/themes/csisjti/assets/_scss/pages/resource-library.scss
+++ b/wp-content/themes/csisjti/assets/_scss/pages/resource-library.scss
@@ -123,6 +123,8 @@
   }
 
   &__sticky {
+    z-index: 1000;
+    
     @include breakpoint('large') {
       position: sticky;
       top: var(--header-height);
